update to minecraft 1.19.2 / java 17
includes some evil workarounds for the tests..